# Saibyl

./: .env.example  .gitignore  CODE_AUDIT_2026-03-30.md  DEPLOY.md  LICENSE  Makefile  README.md  SECURITY_AUDIT_2026-03-30.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: main.py
backend/app/api/: accuracy.py  api_keys.py  auth.py  billing.py  comparison.py  documents.py  exports.py  markets.py  ontologies.py  organizations.py  personas.py  platforms.py  projects.py  reports.py  score.py  simulations.py  uploads.py  webhooks.py  ws.py
backend/app/core/: auth.py  config.py  database.py  llm_client.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py
backend/app/workers/: asset_tasks.py  celery_app.py  export_tasks.py  market_tasks.py  report_tasks.py  simulation_tasks.py
backend/data/persona_packs/: age-18-30.json  age-31-50.json  age-51-70.json  enterprise-it-buyer.json  fintech-investor.json  government-policy.json  healthcare-patient.json  media-journalist.json  political-conservative.json  political-moderate.json  political-progressive.json  retail-consumer.json  saas-buyer-smb.json  sports-bettor.json  sports-book-manager.json  sports-bookmaker.json
backend/scripts/: backup.py  seed.py
backend/scripts/migrations/: 000_extensions.sql  001_organizations_users.sql  (+17 more)
backend/tests/: conftest.py  test_agent_pricing.py  test_api_key_gen.py  test_config.py  test_document_processor.py  test_encryption.py  test_health.py  test_pack_loader.py
(+91 files in other folders)
