[project]
name = "saibyl-backend"
version = "0.1.0"
description = "Saibyl - Swarm Intelligence Prediction Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",

    "anthropic>=0.30.0",
    "litellm>=1.40.0",
    "zep-cloud>=3.13.0",
    "unstructured>=0.14.0",
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "supabase>=2.5.0",
    "httpx>=0.27.0",
    "weasyprint>=62.0",
    "python-pptx>=1.0.0",
    "APScheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "stripe>=8.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "Jinja2>=3.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
